Fix a compilation issue (for Java 17)